# portal-cod4x-plugin

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  portal-cod4x-plugin.config.example.json  version.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  delegate-to-agent.yml  feature_request.yml
.github/workflows/: build-and-test.yml  codequality.yml  copilot-setup-steps.yml  dependabot-automerge.yml  deploy-prd.yml  pr-verify.yml  release-publish-plugin.yml  release-version-and-tag.yml
docs/: development-workflows.md  plugin-development.md  plugin-runtime.md  plugin-settings-rollout.md
include/portal_cod4x/: plugin_runtime.h  plugin_version.h
scripts/: New-Cod4xPluginConfigFromAzure.ps1
src/: cod4x_abi.h  plugin_exports.cpp  plugin_runtime.cpp
terraform/: data.remote_state.tf  data.resource_group.tf  locals.tf  outputs.tf  providers.tf  random_id.tf  storage_account.tf  variables.tf
terraform/backends/: dev.backend.hcl  prd.backend.hcl
terraform/tfvars/: dev.tfvars  prd.tfvars
tests/: plugin_exports_tests.cpp  plugin_runtime_tests.cpp
windows-sdk/: com_plugin.exports.txt
